# G474RE-CORDIC

./: .drone.yml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
doc/: Makefile  cordic_performance.csv  custom.latex  documentation.md  eisvogel.latex  perf.py  performance.Rmd  performance.csv  sources.bib
src/: .mxproject  CMakeLists.txt  CMakeLists_template.txt  G4.ioc  G474RE-CORDIC.ioc  G474RE-CORDIC.xml  Makefile
src/Inc/: stm32g4xx_it.h
src/Src/: cordic_types.h  main.c  main.cpp  main.h  stm32g4xx_it.c
src/behaviour_tests/: CMakeLists.txt  register_tests.cpp
src/lib/: CMakeLists.txt  type_mapper.h  utils.h
src/lib/behaviour_tests/: CMakeLists.txt  catch.hpp  cordic_type_tests.cpp  register_tests.cpp  utils_tests.cpp
src/lib/hal/: cordic.h  cordic_types.h  gpio.h  hal_info.h  register.h  uart.h
src/lib/hal/cordic/: cordic_operations.h
src/lib/hal/stm32/: stm32g4.h
src/lib/hal/stm32/register/: cordic.h
src/lib/hal/stm32/stm32g4/: stm32g474re.h
src/src/: benchmark.h  cordic_types.h  main.cpp  main.h  playground.cpp  playground.h  utils.h
src/src/hal/: cordic.h  cordic_types.h  gpio.h  hal_info.h  register.h
src/src/hal/stm32/: stm32g4.h
src/src/hal/stm32/register/: GPIO.h  cordic.h
src/startup/: startup_stm32g474xx.s  startup_stm32g474xx_hardfloat.s
toolchains/: stm32f4.txt
