cmake_minimum_required(VERSION 3.7)
project(G474RE-CORDIC-TESTS ASM C CXX)

add_subdirectory(.. build)

enable_testing()
add_executable(register_tests register_tests.cpp)
add_test(NAME register_tests_exe COMMAND register_tests)
target_link_libraries(register_tests PUBLIC hal_lib)
target_compile_options(register_tests PUBLIC -Werror -Wall -Wextra -Wpedantic -Wshadow)
target_compile_options(register_tests PUBLIC -fconcepts)
set_property(TARGET register_tests PROPERTY CXX_STANDARD 20)
set_property(TARGET register_tests PROPERTY C_STANDARD 11)

add_executable(utils_tests utils_tests.cpp)
add_test(NAME utils_tests_exe COMMAND utils_tests)
target_link_libraries(utils_tests PUBLIC hal_lib)
target_compile_options(utils_tests PUBLIC -Werror -Wall -Wextra -Wpedantic -Wshadow)
target_compile_options(utils_tests PUBLIC -fconcepts)
set_property(TARGET utils_tests PROPERTY CXX_STANDARD 20)
set_property(TARGET utils_tests PROPERTY C_STANDARD 11)

add_executable(cordic_tests cordic_type_tests.cpp)
add_test(NAME cordic_tests_exe COMMAND cordic_tests)
target_link_libraries(cordic_tests PUBLIC hal_lib)
target_compile_options(cordic_tests PUBLIC -Werror -Wall -Wextra -Wpedantic -Wshadow)
target_compile_options(cordic_tests PUBLIC -fconcepts)
set_property(TARGET cordic_tests PROPERTY CXX_STANDARD 20)
set_property(TARGET cordic_tests PROPERTY C_STANDARD 11)
